@@ -4,4 +4,5 @@ gem 'rake'
 
 group :development do
   gem 'cucumber'
+  gem 'shoe', :path => File.expand_path('.')
 end
