@@ -1,6 +1,7 @@
 == Git
 
 * Add --webcvs to rdoc_options in generated gemspec.
+* Move erb templates from lib to datadir.
 
 == 0.5.1 -- 2010 April 7
 
